--- a/Style.css
+++ b/Style.css
@@ -17,9 +17,15 @@ body {
 
 /* weather section */
 
+.leftrightDiv{
+	display: flex;
+	align-items: center;
+	margin-top: 20px;
+}
+
+
 .container{
 	margin: 20px;
-
 }
 
 .title {
@@ -66,9 +72,10 @@ body {
 .temperature {
 	background-color: #2a2a2c;
 	color: white;
-	border-radius: 50%;
-	padding: 50px;
+	border-radius: 20%;
+	padding: 35px;
 	font-size: 72px;
+	flex-direction: row;
 }
 
 .condition {
