--- a/Style.css
+++ b/Style.css
@@ -7,24 +7,24 @@
 /* body */
 
 body {
-    background-image: url(./images/bg.jpg);
-    width: 100%;
-    height: 100vh;
-    background-position: center;
-    background-size: cover;
-    
+	background-image: url(https://cdn.pixabay.com/photo/2012/06/08/06/19/clouds-49520_1280.jpg);
+	width: 100%;
+	height: 100vh;
+	background-position: center;
+	background-size: cover;
+
 }
 
 /* weather section */
 
-.leftrightDiv{
+.leftrightDiv {
 	display: flex;
 	align-items: center;
 	margin-top: 20px;
 }
 
 
-.container{
+.container {
 	margin: 20px;
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 .location {
-	margin-top: 50px;
+	margin-top: 30px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -66,22 +66,25 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 50px;
+	margin-top: 30px;
 }
 
 .temperature {
+	height: 130px;
+	width: 130px;
 	background-color: #2a2a2c;
 	color: white;
-	border-radius: 20%;
+	border-radius: 50%;
 	padding: 35px;
-	font-size: 72px;
+	font-size: 35px;
 	flex-direction: row;
+	
 }
 
 .condition {
 	display: flex;
 	align-items: center;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 .condition img {
@@ -90,6 +93,7 @@ body {
 
 .condition h3 {
 	font-size: 24px;
+	color: #f9f5f5;
 }
 
 .details {
@@ -106,20 +110,82 @@ body {
 
 .detail p:first-child {
 	font-size: 18px;
-	color: #0e0c0c;
+	color: white;
 	font-weight: bold;
 }
 
 .detail p:last-child {
 	font-size: 24px;
-	color: #111010;
+	color: white;
+}
+
+.second {
+	
+	background-color: rgb(243, 241, 241);
 }
 
 /* footer */
 
 .footer1 {
 	width: 100%;
-	height:150px;
+	height: 150px;
 	background-color: #0b0b11;
-	bottom:0%;
+	bottom: 0%;
 }
+
+.list_img{
+	height: 500px;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+
+
+/*-- for small screen devices--*/
+@media only screen and (max-width: 700px) {
+    .leftrightDiv {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 20px;
+	}
+	body {
+		background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3r_At9pbgHBnRu2JXsAKk_3YQi-oQVpFUig&usqp=CAU);
+		width: 100%;
+		height: 100%;
+		background-position: center;
+		background-size: cover;
+	
+	}
+	.location input {
+		width: 200px;
+		height: 50px;
+		border-width: 2px;
+		border-radius: 10px;
+		padding: 10px;
+		font-size: 18px;
+	}
+	.location button{
+		width: 120px;
+		background-color: #2a2a2c;
+		color: white;
+		border: none;
+		height: 50px;
+		border-radius: 10px;
+		margin-left: 5px;
+		font-size: 15px;
+		cursor: pointer;
+		padding: 3px;
+	}
+	.container {
+		margin: 2px;
+	}
+	.title {
+		/* background-color: #2a2a2c; */
+		color: white;
+		text-align: center;
+		padding: 1px;
+	}
+    }
+
+    
