--- a/Style.css
+++ b/Style.css
@@ -33,6 +33,7 @@ body {
 	color: white;
 	text-align: center;
 	padding: 20px;
+	font-size: 40px;
 }
 
 .location {
@@ -50,16 +51,20 @@ body {
 	padding: 10px;
 	font-size: 18px;
 }
-
+.location button:hover{
+	background-color: rgb(238, 247, 247);
+	color: #0b0b11;
+}
 .location button {
 	background-color: #2a2a2c;
 	color: white;
 	border: none;
 	border-radius: 5px;
-	padding: 10px 20px;
 	margin-left: 10px;
 	font-size: 18px;
 	cursor: pointer;
+	height: 40px;
+	width: 120px;
 }
 
 .weather {
@@ -69,26 +74,38 @@ body {
 	margin-top: 30px;
 }
 
-.transbox {
-	height: 130px;
-	width: 130px;
-	background-color: #262629;
+div.transbox {
+	padding: 25px;
+	margin-top: 40px;
+	display: flex;
+	height: 100px;
+	width: 400px;
+	background-color: #1f2021;
+	border: 1px solid black;
+	border-radius: 10px;
+	opacity: .4;
+}
+
+div.transbox p {
+	font-weight: bold;
 	color: white;
-	border-radius: 50%;
-	padding: 35px;
-	font-size: 35px;
-	flex-direction: row;
-	
+	font-size: 30px;
+	margin-bottom: 15px;
+	margin-left: 10px;
+}
+
+#img {
+	height: 80px;
+	width: 65px;
+	margin-right: 0%;
+	padding-bottom: 20px;
+	border: none !important;
 }
 
 .condition {
 	display: flex;
 	align-items: center;
-	margin-top: 30px;
-}
-
-.condition img {
-	margin-right: 20px;
+	
 }
 
 .condition h3 {
@@ -104,8 +121,9 @@ body {
 }
 
 .detail {
-	margin: 0 20px;
+	margin-left: 100px;
 	text-align: center;
+	display: inline;
 }
 
 .detail p:first-child {
@@ -120,7 +138,7 @@ body {
 }
 
 .second {
-	
+
 	background-color: rgb(243, 241, 241);
 }
 
@@ -133,7 +151,7 @@ body {
 	bottom: 0%;
 }
 
-.list_img{
+.list_img {
 	height: 500px;
 	margin-top: 30px;
 	margin-bottom: 20px;
@@ -143,20 +161,22 @@ body {
 
 /*-- for small screen devices--*/
 @media only screen and (max-width: 700px) {
-    .leftrightDiv {
+	.leftrightDiv {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin-top: 20px;
 	}
+
 	body {
 		background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3r_At9pbgHBnRu2JXsAKk_3YQi-oQVpFUig&usqp=CAU);
 		width: 100%;
 		height: 100%;
 		background-position: center;
 		background-size: cover;
-	
+
 	}
+
 	.location input {
 		width: 400px;
 		height: 50px;
@@ -165,7 +185,8 @@ body {
 		padding: 10px;
 		font-size: 18px;
 	}
-	.location button{
+
+	.location button {
 		width: 120px;
 		background-color: #2a2a2c;
 		color: white;
@@ -177,15 +198,22 @@ body {
 		cursor: pointer;
 		padding: 3px;
 	}
+
 	.container {
-		margin: 2px;
+		margin: auto;
 	}
+
 	.title {
 		/* background-color: #2a2a2c; */
 		color: white;
 		text-align: center;
-		padding: 1px;
+		font-size: 50px;
+		font-weight: bold;
+
 	}
+
+	
+
 	/*.temperature1 {
 		background-color: #2a2a2c;
 		height: 100px;
@@ -200,29 +228,31 @@ body {
 
 	div.transbox {
 		margin-top: 40px;
-	display: flex;
+		display: flex;
 		height: 100px;
 		width: 400px;
 		background-color: #1f2021;
 		border: 1px solid black;
 		border-radius: 10px;
 		opacity: .4;
-	  }
-	  
+	}
+
 	div.transbox p {
 		font-weight: bold;
 		color: white;
 		font-size: 30px;
 		margin-bottom: 15px;
 		margin-left: 10px;
-	  }
-	  #img{
+	}
+
+	#img {
 		height: 65px;
 		width: 65px;
 		margin-right: 0%;
 		padding-bottom: 10px;
 		border: none;
-	  }
-    }
-
-    
+	}
+	.details{
+		margin-right: 80px;
+	}
+}
