--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,8 @@
 /* body */
 
 body {
-	background-image: url(https://cdn.pixabay.com/photo/2012/06/08/06/19/clouds-49520_1280.jpg);
+	/*background-image: url(https://cdn.pixabay.com/photo/2012/06/08/06/19/clouds-49520_1280.jpg);*/
+	background-image: url(./images/bg.jpg);
 	width: 100%;
 	height: 100vh;
 	background-position: center;
@@ -75,10 +76,9 @@ body {
 }
 
 div.transbox {
-	padding: 25px;
 	margin-top: 40px;
 	display: flex;
-	height: 100px;
+	height: 80px;
 	width: 400px;
 	background-color: #1f2021;
 	border: 1px solid black;
@@ -90,7 +90,8 @@ div.transbox p {
 	font-weight: bold;
 	color: white;
 	font-size: 30px;
-	margin-bottom: 15px;
+	margin-top: 15px;
+	margin-bottom: 10px;
 	margin-left: 10px;
 }
 
@@ -98,7 +99,7 @@ div.transbox p {
 	height: 80px;
 	width: 65px;
 	margin-right: 0%;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 	border: none !important;
 }
 
@@ -136,10 +137,14 @@ div.transbox p {
 	font-size: 24px;
 	color: white;
 }
+.resource{
+	color: #f9f5f5;
+	text-decoration: none !important;
+margin-left: 100px;
+margin-top: 100px;
+text-decoration: none !important;
+font-size: 20px;
 
-.second {
-
-	background-color: rgb(243, 241, 241);
 }
 
 /* footer */
