--- a/Style.css
+++ b/Style.css
@@ -119,6 +119,8 @@ div.transbox p {
 	justify-content: center;
 	align-items: center;
 	margin-top: 50px;
+	margin-left: 50px;
+	margin-right: 50px;
 }
 
 .detail {
