--- a/Style.css
+++ b/Style.css
@@ -14,6 +14,11 @@ header {
 	background-size: cover;
 
 }
+.d-flex{
+	margin-left: 400px;
+	width: 400px;
+	height: 35px;
+}
 
 /* weather section */
 
@@ -147,12 +152,6 @@ div.transbox p {
 
 /* footer */
 
-.footer1 {
-	width: 100%;
-	height: 150px;
-	background-color: #0b0b11;
-	bottom: 0%;
-}
 
 .list_img {
 	height: 500px;
@@ -163,14 +162,19 @@ div.transbox p {
 
 
 /*-- for small screen devices--*/
-@media only screen and (max-width: 710px) {
+@media only screen and (max-width: 480px) {
 	.leftrightDiv {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		margin-top: 20px;
 	}
-
+	.d-flex{
+		margin-left: 0%;
+		width: 400px;
+		height: 40px;
+	}
+	
 	header {
 		background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3r_At9pbgHBnRu2JXsAKk_3YQi-oQVpFUig&usqp=CAU);
 		width: 100%;
@@ -249,6 +253,10 @@ div.transbox p {
 	}
 }
 
+
+/*--------------footer-----------*/
+
+
 footer{
     
     background-color:#07080a ;
@@ -259,9 +267,9 @@ footer{
 }
 .footer-logo{
     height: 70px;
-    background-color: #e6c1c9;
-    border: 1px solid #ff0037;
-    border-radius: 40px;
+    background-color: #141112;
+border-radius: 50px;
+   
     margin-right: 20px;
 }
 .row{
