--- a/Style.css
+++ b/Style.css
@@ -14,6 +14,10 @@ header {
 	background-size: cover;
 
 }
+.logo-img1{
+	border-radius: 50px;
+	margin-left: 30px;
+}
 .d-flex{
 	margin-left: 400px;
 	width: 400px;
